--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
-{
-  "name": "portfolio-reccos",
+{  "name": "portfolio-reccos",
   "private": true,
-  "version": "0.2.1",
-  "type": "module",
-  "scripts": {
+  "version": "0.3.0",
+  "type": "module","scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:run": "vitest run"
-  },
-  "devDependencies": {
+    "test:run": "vitest run",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext js,jsx --fix"
+  },  "devDependencies": {
     "@vitejs/plugin-react": "4.5.2",
     "vite": "6.3.5",
     "vitest": "3.2.4",
@@ -19,7 +18,12 @@
     "jsdom": "26.1.0",
     "@testing-library/react": "16.3.0",
     "@testing-library/jest-dom": "6.6.3",
-    "@testing-library/user-event": "14.6.1"
+    "@testing-library/user-event": "14.6.1",
+    "eslint": "^9.17.0",
+    "@eslint/js": "^9.17.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.16"
   },
   "dependencies": {
     "react": "19.1.0",
