--- a/package.json
+++ b/package.json
@@ -19,23 +19,27 @@
     "lint:fix": "eslint . --ext js,jsx --fix"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "5.1.4",
-    "vite": "7.3.1",
-    "vitest": "4.0.18",
-    "@vitest/ui": "4.0.18",
-    "@vitest/coverage-v8": "4.0.18",
-    "jsdom": "28.1.0",
-    "@testing-library/react": "16.3.2",
-    "@testing-library/jest-dom": "6.9.1",
-    "@testing-library/user-event": "14.6.1",
-    "eslint": "^9.39.3",
     "@eslint/js": "^9.39.3",
+    "@testing-library/jest-dom": "6.9.1",
+    "@testing-library/react": "16.3.2",
+    "@testing-library/user-event": "14.6.1",
+    "@vitejs/plugin-react": "5.1.4",
+    "@vitest/coverage-v8": "4.0.18",
+    "@vitest/ui": "4.0.18",
+    "eslint": "^9.39.3",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.5.0"
+    "eslint-plugin-react-refresh": "^0.5.0",
+    "jsdom": "28.1.0",
+    "minimatch": "^10.2.2",
+    "vite": "7.3.1",
+    "vitest": "4.0.18"
   },
   "dependencies": {
     "react": "19.2.4",
     "react-dom": "19.2.4"
+  },
+  "overrides": {
+    "minimatch": "^10.2.2"
   }
 }
